[bdist_wheel]
universal=1

[coverage:run]
omit = tests/*

[metadata]
description-file=README.md

[wheel]
universal = 1

[isort]
line_length=120
indent='    '
multi_line_output=3
length_sort=1


[pylama]
linters=pycodestyle,pydocstyle,pylint,pyflakes,mccabe
skip=tests/*

[pylama:pydocstyle]
add-ignore=D100,D104
match_dir=s3_kinesis_logforwarder

[pylama:pycodestyle]
max_line_length = 120

[yapf]
based_on_style = pep8
indent_dictionary_value = True

[tool:pytest]
addopts =--pylama --cov=pies --cov-report=term-missing
cov = pies
cov-report = xml:cov.xml
filterwarnings = ignore:.*Module already imported.*:Warning

[pytest-watch]
nobeep = True
